feat: add CQRs and In Memory Repositories

--- a/DDDApplication.Application/DDDApplication.Application.csproj
+++ b/DDDApplication.Application/DDDApplication.Application.csproj
@@ -4,4 +4,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="CryptoHelper" Version="4.0.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DDDApplication.Domain\Domain.csproj" />
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
 </Project>
