--- a/DDDApplication.Application/DDDApplication.Application.csproj
+++ b/DDDApplication.Application/DDDApplication.Application.csproj
@@ -10,6 +10,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DDDApplication.Domain\Domain.csproj" />
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\DDDApplication.Shared\Shared.csproj" />
   </ItemGroup>
 </Project>
