--- a/DDDApplication.Tests/DDDApplication.Tests.csproj
+++ b/DDDApplication.Tests/DDDApplication.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DDDApplication.Application\DDDApplication.Application.csproj" />
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\DDDApplication.Shared\Shared.csproj" />
     <ProjectReference Include="..\DDDApplication.Domain\Domain.csproj" />
   </ItemGroup>
 </Project>
