--- a/GymPass.Infrastructure/GymPass.Infrastructure.csproj
+++ b/GymPass.Infrastructure/GymPass.Infrastructure.csproj
@@ -12,10 +12,17 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\GymPass.Domain\GymPass.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="DB\GymPassContextFactory.cs">
+        <DependentUpon>GymPassContext.cs</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
