refactor: remove UserRole relationship with Fluent API, refactor user and gyms repository methods and add migrations folder to csproj

--- a/GymPass.Infrastructure/GymPass.Infrastructure.csproj
+++ b/GymPass.Infrastructure/GymPass.Infrastructure.csproj
@@ -21,9 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="DB\GymPassContextFactory.cs">
-        <DependentUpon>GymPassContext.cs</DependentUpon>
-      </Compile>
+      <Folder Include="DB\Migrations\" />
     </ItemGroup>
 
 </Project>
